2006-12-02  Matti Aarnio  <mea@zmailer.org>

	* router/Makefile.in, router/db.c, router/functions.c,
	  router/prototypes.h, router/rfc822.c, router/shliaise.c,
	  router/unvis.c, router/vis.c, include/vis.h:
	    Bit by bit feeding in  SRS support written by
	    Daniel Kiper <dkiper@netspace.com.pl>

2006-12-01  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.h, transports/smtp/smtp.c,
	  transports/smtp/smtptls.c:
	    Changed this last big user of select()  to use  zmpoll()
	    API instead.

	* include/hostenv.h, include/libz.h, include/mailer.h
	    Ugly static defines to prevent Solaris 10 from including
	    <sys/stream.h> in lowish level API calls of network stuff.

	* router/daemonsub.c, scheduler/mq2.c, scheduler/transport.c,
	  smtpserver/smtpserver.c, smtpserver/subdaemon-ctf.c,
	  smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-trk.c,
	  smtpserver/subdaemons.c:
	    On Solaris 10 the POLLIN does not happen when socket has
	    EOF condition on it!  It gives POLLHUP !

2006-11-30  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/mxverify.c, smtpserver/smtptls.c,
	  smtpserver/subdaemons.c, smtpserver/subdaemon-rtr.c,
	  smtpserver/subdaemon-ctf.c, smtpserver/subdaemon-trk.c:
	    Reworked things to use  zmpoll()  API in place of old
	    select() API.

	* smtpserver/mxverify.c:
	    Verify MX target IP addresses to be in A/B/C classes, and
	    not 0/8, 10/8, 127/8, 169.254/16, 172.16/12, 192.168/16 nets.
	    This blocks some subsets of spammers quite nicely, when
	    claimed message source address routes emails to loopback,
	    and some such cases...

	* lib/zmpoll.c:
	    Mistake in the  zmpoll_addfd():  didn't add fd=0 cases
	    into poll datasets!

2006-10-23  Matti Aarnio  <mea@zmailer.org>

	* include/libc.h, include/mail.h.in, libc/mail.c, libc/sfmail.c,
	  scheduler/msgerror.c, transports/errormail/errormail.c,
	  transports/reroute/reroute.c: