@@ -1,5 +1,9 @@
 2006-12-02  Matti Aarnio  <mea@zmailer.org>
 
+	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
+	  transports/smtp/smtpauth.c:
+	    More feeding of Daniel Kiper's bits.
+
 	* router/Makefile.in, router/db.c, router/functions.c,
 	  router/prototypes.h, router/rfc822.c, router/shliaise.c,
 	  router/unvis.c, router/vis.c, include/vis.h:
